--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".fragment.HomeFragment" xmlns:app="http://schemas.android.com/apk/res-auto">
+        tools:context=".fragment.HomeFragment"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
             android:textColor="@android:color/white"
@@ -15,7 +16,11 @@
             android:background="@color/colorPrimary"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:id="@+id/main_toolbar">
+            android:id="@+id/main_toolbar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.0">
 
     </TextView>
 
