--- a/app/src/main/res/layout/custom_grid.xml
+++ b/app/src/main/res/layout/custom_grid.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-        card_view:rippleColor="#cfd8dc"
+<androidx.cardview.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/view"
+        android:foreground="?android:attr/selectableItemBackground"
         android:clickable="true"
+        android:focusable="true"
         android:padding="4dp"
         android:layout_margin="10dp"
         app:cardCornerRadius="10dp"
-        android:elevation="10dp"
-        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:elevation="5dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:card_view="http://schemas.android.com/tools">
+
+        xmlns:card_view="http://schemas.android.com/tools">
 
     <LinearLayout
             android:padding="10dp"
@@ -44,4 +48,4 @@
 
     </LinearLayout>
 
-</com.google.android.material.card.MaterialCardView>
+</androidx.cardview.widget.CardView>
