--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -4,9 +4,23 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" >
 
+    <TextView
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:gravity="center"
+            android:text="Smart Home"
+            android:background="@color/colorPrimary"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:id="@+id/main_toolbar">
+
+
+    </TextView>
+
     <com.google.android.gms.maps.MapView
-            android:name="com.google.android.geo.maps.SupportMapFragment"
+           android:name="com.google.android.gms.maps.MapFragment"
             android:id="@+id/mapView"
+            android:layout_below="@+id/main_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
