--- a/app/src/main/res/layout/custom_grid.xml
+++ b/app/src/main/res/layout/custom_grid.xml
@@ -12,11 +12,13 @@
         android:elevation="5dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
+        card_view:cardBackgroundColor="@android:color/white"
         android:layout_height="120dp"
 
         xmlns:card_view="http://schemas.android.com/tools">
 
     <LinearLayout
+            android:id="@+id/background"
             android:padding="10dp"
             android:orientation="vertical"
             android:gravity="center"
@@ -24,12 +26,14 @@
             android:layout_height="match_parent">
 
 
-        <ImageView
-                android:layout_gravity="center_horizontal"
-                android:id="@+id/icon"
-                android:src="@drawable/bulb"
-                android:layout_width="50dp"
-                android:layout_height="50dp"/>
+
+            <ImageView
+                    android:src="@drawable/bulb"
+                    android:layout_width="60dp"
+                    android:id="@+id/icon"
+                    android:layout_height="60dp"
+            />
+
         <TextView
                 android:textStyle="bold"
                 android:id="@+id/name_id"
