--- a/app/src/main/res/drawable/circle_green.xml
+++ b/app/src/main/res/drawable/circle_green.xml
@@ -3,7 +3,7 @@
        xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid android:color="#4CAF50"/>
-    <stroke android:color="@android:color/black"/>
+    <stroke android:color="@color/white"/>
     <stroke android:width="5dp"/>
 
 </shape>
