--- a/app/src/main/res/drawable/circle_red.xml
+++ b/app/src/main/res/drawable/circle_red.xml
@@ -3,7 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid android:color="@android:color/holo_red_light"/>
-    <stroke android:color="@android:color/black"/>
+    <stroke android:color="@color/white"/>
     <stroke android:width="5dp"/>
 
 </shape>
