--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,6 +24,42 @@
 
     </TextView>
 
+    <androidx.cardview.widget.CardView
+            android:layout_marginTop="20dp"
+            app:cardCornerRadius="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:id="@+id/cardView"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/main_toolbar">
+
+        <TextView
+                android:fontFamily="sans-serif-black"
+                android:textStyle="bold"
+                android:padding="15dp"
+                android:textSize="20sp"
+                android:gravity="center"
+                android:text="Temperature"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+
+        <TextView
+                android:layout_marginTop="10dp"
+                android:id="@+id/temp"
+                android:textStyle="bold"
+                android:textSize="30sp"
+                android:gravity="center"
+                android:text="0"
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+
+    </androidx.cardview.widget.CardView>
     <TextView
             android:id="@+id/no_data"
             android:visibility="gone"
@@ -51,14 +87,18 @@
             app:layout_constraintTop_toBottomOf="@+id/main_toolbar"/>
 
     <androidx.recyclerview.widget.RecyclerView
-            android:layout_marginTop="?attr/actionBarSize"
+            android:padding="10dp"
             android:layout_gravity="center"
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_constraintTop_toBottomOf="@+id/main_toolbar"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="3dp" app:layout_constraintHorizontal_bias="0.0">
+            app:layout_constraintStart_toStartOf="@+id/cardView"
+            app:layout_constraintHorizontal_bias="0.953"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/cardView"
+            android:layout_marginTop="180dp"
+            app:layout_constraintTop_toBottomOf="@+id/cardView" app:layout_constraintVertical_bias="0.0">
 
     </androidx.recyclerview.widget.RecyclerView>
 
